feat: 수정사항 반영 완료

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,12 @@
                             />
                         </a>
                     </h1>
-                    <a href="#none" class="terms" download>보험약관</a>
+                    <a
+                        href="../assets/pdf/하이펫애견보험_보험약관.pdf"
+                        class="terms"
+                        download
+                        >보험약관</a
+                    >
                 </div>
 
                 <div class="responsive_sction">
@@ -893,7 +898,7 @@
                 <!-- 하이펫 애견보험 - 상담신청 -->
                 <main
                     id="main-contents4"
-                    class="contents_section guide highPet"
+                    class="contents_section guide highPet pad_btm40"
                 >
                     <div class="consult_section">
                         <div class="input_section">
@@ -1055,7 +1060,7 @@
                 <!-- 굿앤굿 애견보험 - 상품안내 -->
                 <main
                     id="main-contents5"
-                    class="contents_section guide goodAndGood"
+                    class="contents_section guide goodAndGood mar_btm80"
                 >
                     <div class="product_list">
                         <ul>
@@ -1867,7 +1872,10 @@
                                 ></span
                             >
                             <div class="btn_center">
-                                <a href="#none" class="orange_btn" download
+                                <a
+                                    href="../assets/pdf/하이펫애견보험_청구서.pdf"
+                                    class="orange_btn"
+                                    download
                                     >보험금 청구서 다운받기</a
                                 >
                             </div>
@@ -1881,7 +1889,7 @@
                     id="main-contents7"
                     class="contents_section guide goodAndGood"
                 >
-                    <div class="notice_wrap">
+                    <div class="notice_wrap mar_btm80">
                         <h3 class="notice_title">보험계약체결</h3>
                         <p>
                             보험계약 체결 전에 상품설명서 및 약관을 읽어보시기
@@ -2232,7 +2240,7 @@
                 <!-- 굿앤굿 애견보험 - 상담신청 -->
                 <main
                     id="main-contents8"
-                    class="contents_section guide goodAndGood"
+                    class="contents_section guide goodAndGood pad_btm40"
                 >
                     <div class="consult_section">
                         <div class="input_section">
