feat: 수정사항 반영 완료

--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,12 @@
                                 alt="현대해상 로고"
                             />
                         </a>
+                        <a href="#none">
+                            <img
+                                src="../assets/images/logo02.png"
+                                alt="MIRAION 로고"
+                            />
+                        </a>
                     </h1>
                     <a
                         href="../assets/pdf/하이펫애견보험_보험약관.pdf"
@@ -30,12 +36,22 @@
                 </div>
 
                 <div class="responsive_sction">
-                    <p>저렴한 보험료, 높은 보장금액!</p>
-                    <strong>
-                        하이펫
-                        <br />
-                        애견보험
-                    </strong>
+                    <div class="res_box active">
+                        <p>저렴한 보험료, 높은 보장금액!</p>
+                        <strong>
+                            하이펫
+                            <br />
+                            애견보험
+                        </strong>
+                    </div>
+                    <div class="res_box">
+                        <p>폭 넓은 보장과 긴 보장기간!</p>
+                        <strong>
+                            굿앤굿
+                            <br />
+                            우리펫보험
+                        </strong>
+                    </div>
                 </div>
 
                 <div class="type_section">
@@ -203,9 +219,10 @@
                                     <span>보상!</span>
                                 </h3>
                                 <p>
-                                    저축보험료가 부가된 장기보험이 아니라
+                                    적립보험료가 부가된 장기보험이 아니라
                                     <span>
-                                        합리적인 월 보험료, 만 2세 기준 45,090원
+                                        합리적인 보장보험료로 만 2세 기준
+                                        45,090원
                                     </span>
                                 </p>
                             </li>
