feat: select 커스텀 퍼블 추가

--- a/html/index.html
+++ b/html/index.html
@@ -946,35 +946,26 @@
                                 />
                             </div>
                             <div class="input_box">
-                                <label class="required" for="">견종</label>
-                                <!-- 이거는 select 스타일이 안잡혀 있고 디자인도 없고 디자인 부터 해야돼요 -->
-                                <!-- <select name="" id="">
-                                    <option value="">남자</option>
-                                    <option value="">여자</option>
-                                </select> -->
-
-                                <div class="mar_top12">
-                                    <input
-                                        type="radio"
-                                        class="hide ch_radio"
-                                        name="gender"
-                                        id="gender01"
-                                        checked
-                                    />
-                                    <label class="label" for="gender01"
-                                        >남자</label
-                                    >
-                                    <input
-                                        type="radio"
-                                        class="hide ch_radio"
-                                        name="gender"
-                                        id="gender02"
-                                    />
-                                    <label
-                                        class="label mar_left24"
-                                        for="gender02"
-                                        >여자</label
-                                    >
+                                <label class="required" for="">견종선택</label>
+                                <div class="input_list mar_top12">
+                                    <div class="select" id="breed_1">
+                                        <button type="button" value="0">
+                                            선택해주세요
+                                        </button>
+                                        <ul></ul>
+                                    </div>
+                                    <div class="select" id="breed_2">
+                                        <button type="button">
+                                            선택해주세요
+                                        </button>
+                                        <ul>
+                                            <li>
+                                                <button type="button" value="">
+                                                    선택해주세요
+                                                </button>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                             <div class="input_box">
