푸터 문구 추가

--- a/html/index.html
+++ b/html/index.html
@@ -2024,6 +2024,10 @@
                     </em>
                     자임을 알려드립니다.
                 </p>
+                <p>
+                    현대해상 준법감시인확인필  제 20244197호
+                    <em>(유효기간: 2024.10.18~2025.10.18)</em>
+                </p>
             </div>
             <div class="footer_bottom">
                 <p>
