하이펫 상품안내 문구 추가, 굿앤굿 가입 및 보상절차 연락처 정보 수정

--- a/html/index.html
+++ b/html/index.html
@@ -175,7 +175,10 @@
                                 <span>자기부담금 1만원 제외 100만원
                                     한도</span>
                                 70%까지 실손보상
-                            </p>
+                            </p>                           
+                            <p>진료, 검사, 치료만으로도 보장</p>
+                            <p>수술을 하지 않더라도 보장</p>    
+                            
                         </li>
                         <li class="p_list02">
                             <strong>순수보장형으로 합리적인</strong>
@@ -1550,11 +1553,11 @@
 
                         <div class="contact_section">
                             <ul>
-                                <li class="fax">팩스 : 0505-988-5959</li>
+                                <li class="fax">팩스 : 0507-774-6060</li>
                                 <li class="email">
-                                    이메일 : 1070@sejongcas.com
+                                    이메일 : hibs@hi.co.kr
                                 </li>
-                                <li class="tell">핸드폰 : 010-8248-7015</li>
+                                <li class="tell">연락처 : 1588-5656</li>
                             </ul>
                         </div>
 
