--- a/html/index.html
+++ b/html/index.html
@@ -196,10 +196,10 @@
                         </li>
                         <li class="p_list03">
                             <strong>의료비는 물론</strong>
-                            <h3>배상책임과 장제비까지 보장!</h3>
+                            <h3>배상책임과 장례비까지 보장!</h3>
                             <p>
                                 1천만원 한도 배상책임 실손보장은 물론
-                                <span>장제비 15만원 정액지급</span>
+                                <span>장례비 15만원 정액지급</span>
                             </p>
                         </li>
                     </ul>
@@ -231,8 +231,8 @@
                                 </strong>
                                 <p>
                                     (다른 반려견보험처럼 입통원 하루
-                                    <em>최대 15만원까지만 보장하는 상품</em>
-                                    이 아닙니다.)
+                                    <em>최대 15만원까지만 보장하는 상품이</em>
+                                    아닙니다.)
                                 </p>
                             </li>
                             <li>
@@ -245,8 +245,8 @@
                                 <p>
                                     (다른 반려견보험처럼 치료기간 매일매일
                                     <em>자기부담금을 반복해서
-                                        공제</em>
-                                    하는 상품이 아닙니다.)
+                                        공제하는</em>
+                                    상품이 아닙니다.)
                                 </p>
                             </li>
                         </ul>
@@ -355,7 +355,7 @@
                                     </strong>
                                     <i>그 질병이 나을 때까지<br />자기부담금은
                                         딱 1번</i>
-                                    1만원 만 공제한 나머지 금액의 70%를<br />하<i>나의 질병 당 100만원까지 1년에 총
+                                    1만원만 공제한 나머지 금액의 70%를<br />하<i>나의 질병 당 100만원까지 1년에 총
                                         1000</i>만원 까지 보상해드립니다.
                                 </p>
                                 <img src="../assets/images/reason01.png" />
@@ -364,9 +364,9 @@
                                 <!-- prettier-ignore-start -->
                                 <p>
                                     <i>반려견이 타인이나 타인의 동물을
-                                        물거나 다</i>
-                                    치게 했을 때도<br />
-                                    <strong>자기부담금 3만원을 공제한<br class="none" />나머지 100% 금액</strong>을 1년에 1000만원 까<br
+                                        물거나 다치게</i>
+                                    했을 때도<br />
+                                    <strong>자기부담금 3만원을 공제한<br class="none" /> 나머지 100% 금액</strong>을 1년에 1000만원 까<br
                                         class="none" />지 보상해드립니다.
                                 </p>
                                 <!-- prettier-ignore-end -->
