서버 주소 변경

--- a/html/index.html
+++ b/html/index.html
@@ -2150,7 +2150,7 @@
 
             // AJAX를 통해 서버로 데이터 전송
             $.ajax({
-                url: 'http://15.165.226.147:8086/api/users/insurance-claim-pet', // 서버 API 엔드포인트
+                url: 'https://admin.simon-global.co.kr/api/users/insurance-claim-pet', // 서버 API 엔드포인트
                 type: 'POST',
                 contentType: 'application/json',
                 data: JSON.stringify(consultationData),
