--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,7 @@
                     </h1>
                     <div class="tels">
                         <a href="tel:1588-3951">1588-3951</a>
+                        <a href="tel:010-3459-3951">010-3459-3951(하이펫애견보험)</a>
                         <a href="tel:010-8188-3951">010-8188-3951</a>
                     </div>
                 </div>
@@ -57,7 +58,8 @@
             <div class="type_section">
                 <div class="type_txt guide">
                     <div id="highPet" class="txt pet">
-                        <strong>저렴한 보험료, 높은 보장금액!</strong>
+                        <!-- <strong>저렴한 보험료, 높은 보장금액!</strong> -->
+                        <strong>수술안해도 하루 3백만원 자기부담금은 <br/>딱 1회만 공제하는 유일한 보험!</strong>
                         <h2>
                             <span>하이펫</span>
                             애견보험
@@ -172,7 +174,7 @@
                             <strong>입통원 의료비 업계최고</strong>
                             <h3>하루 보상한도 300만원!</h3>
                             <p>
-                                <span>자기부담금 1만원 제외 300만원
+                                <span>자기부담금 3만원 제외 300만원
                                     한도</span>
                                 70%까지 실손보상
                             </p>                           
@@ -190,7 +192,7 @@
                                 적립보험료가 부가된 장기보험이 아니라
                                 <span>
                                     합리적인 보장보험료로 만 2세 기준
-                                    45,090원
+                                    44,700원
                                 </span>
                             </p>
                         </li>
@@ -303,7 +305,7 @@
                             </ul>
                             <ul>
                                 <li class="table_title">자기부담금</li>
-                                <li>1만원</li>
+                                <li>3만원</li>
                                 <li>없음</li>
                                 <li>3만원</li>
                             </ul>
@@ -355,7 +357,7 @@
                                     </strong>
                                     <i>그 질병이 나을 때까지<br />자기부담금은
                                         딱 1번</i>
-                                    1만원만 공제한 나머지 금액의 70%를<br />하<i>나의 질병 당 300만원까지 1년에 총
+                                    3만원만 공제한 나머지 금액의 70%를<br />하<i>나의 질병 당 300만원까지 1년에 총
                                         1000</i>만원 까지 보상해드립니다.
                                 </p>
                                 <img src="../assets/images/reason01.png" />
