(굿앤굿우리펫보험) 텍스트 추가

--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
                     <div class="tels">
                         <a href="tel:1588-3951">1588-3951</a>
                         <a href="tel:010-3459-3951">010-3459-3951(하이펫애견보험)</a>
-                        <a href="tel:010-8188-3951">010-8188-3951</a>
+                        <a href="tel:010-8188-3951">010-8188-3951(굿앤굿우리펫보험)</a>
                     </div>
                 </div>
                 <!--하이펫 애견보험-->
